--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcode01.github.io/From-Inspection-to-Planning-Why-a-Roofing-Consultation-Sets-the-Right-Foundation/">https://cloudstackcode01.github.io/From-Inspection-to-Planning-Why-a-Roofing-Consultation-Sets-the-Right-Foundation/</a><br>    
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Avalon+Roofing+Services/From+Inspection+to+Planning:+Why+a+Roofing+Consultation+Sets+the+Right+Foundation/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Avalon+Roofing+Services/From+Inspection+to+Planning:+Why+a+Roofing+Consultation+Sets+the+Right+Foundation/index.html</a><br>
+                <a target="_bLank" href="https://from-inspection-to-planni-git-400b70-cloudstackcode01s-projects.vercel.app/">https://from-inspection-to-planni-git-400b70-cloudstackcode01s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://neon-cascaron-40220e.netlify.app/">https://neon-cascaron-40220e.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
